--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
        
         <div class="Done"><img class="donebtn"style="border-radius: 14%; width: 80px; ;"src="Done.JPG"></div>
-        <div class="Table"><img src="".\Assets\Table.png""></div>
+        <div class="Table"><img src="Assets/Table.png"></div>
         
         </div>
  <div class="footer"></div>
