--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
        
-        <div class="Done"><img class="donebtn"style="border-radius: 14%; width: 80px; ;"src="Done.JPG"></div>
+        <div class="Done"><img class="donebtn"style="border-radius: 14%; width: 80px; "src="./Assets/Done.JPG"></div>
         <div class="Table"><img src="./Assets/Table.png"></div>
         
         </div>
