Update Thali Items to 'satish food camel variabel'

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="menu-items">
 
 
-                <div class="menutp2"> Thali Items</div></br>
+                <div class="menutp2"> satish food camel variabel</div></br>
                 <div class="menutp1"> Chicken(Dry)</div></br>
                 <div class="menutp"> Chicken(Gravy Item)</div></br>
                 <div class="menutp"> Tandoori Item</div></br>
